--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -11,7 +11,7 @@
 
         <div class="properties">
             <div class="user-form">
-                <p class="title">Conclude Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
+                <p class="title">Verify Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
                 <div class="field-container">
                     <form method="post">
 
