--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -338,7 +338,6 @@ body {
                         margin-left: 10px;
                         font-size: 18px;
                     }
-
             .panel .body .properties .tool-container {
                 margin-left: 30px;
                 display: flex;
@@ -395,12 +394,10 @@ body {
                                     margin-top: 10px;
                                     width: 30%
                                 }
-                
                             .panel .body .properties .tool-container .tools .selections {
                                 margin-bottom: 20px;
                                 margin-top: 20px;
                             }
-
                                 .panel .body .properties .tool-container .tools .selections .section {
                                     margin-top: 10px;
                                     display: flex;
@@ -410,7 +407,6 @@ body {
                                 .panel .body .properties .tool-container .tools .selections .section-info {
                                     margin-left: 7px;
                                 }
-
                             .panel .body .properties .tool-container .tools .info {
                                 margin-top: 20px;
                                 display: flex;
@@ -422,7 +418,6 @@ body {
                                 padding: 10px;
                                 border-radius: 7px;
                             }
-
                             .panel .body .properties .tool-container .tools .info-section {
                                 display: flex;
                                 justify-content: space-between;
@@ -433,7 +428,6 @@ body {
                 width: 70%;
                 max-height: 750px;
             }
-
                 .panel .body .properties .list-container .top {
                     border-bottom: 1px solid var(--gray4);
                     padding: 8px;
@@ -445,7 +439,6 @@ body {
                     height: 100%;
                     width: 100%;
                 }
-
                     .panel .body .properties .list-container .order-list ul {
                         list-style: none;
                     }
@@ -457,7 +450,7 @@ body {
                         justify-content: space-between;
                         align-items: center;
                         width: 100%;
-                        padding: 10px 0;
+                        padding: 8px 0;
                     }
                         .panel .body .properties .list-container .order-list li:hover {
                             background-color: var(--gray3);
@@ -518,6 +511,23 @@ body {
                             margin: 10px 0;
                             font-size: 15px;
                         }
+
+                    .panel .body .properties .order-list2 .sorters .options {
+                        display: flex;
+                        flex-direction: row;
+                        padding: 10px 0;
+                    }
+
+                        .panel .body .properties .order-list2 .sorters .options form {
+                            display: flex;
+                            gap: 20px;
+                        }
+
+                        .panel .body .properties .order-list2 .sorters .options .selector {
+                            display: flex;
+                            flex-direction: column;
+                        }
+
                 .panel .body .properties .order-list2 table {
                     padding-right: 20px;
                     width: 100%;
@@ -531,6 +541,13 @@ body {
                             background-color: var(--gray3);
                             cursor: pointer;
                         }
+
+                        .panel .body .properties .order-list2 table .clickable .btn {
+                            padding: 2px 10px;
+                            font-size: 15px;
+                        }
+
+
                     .panel .body .properties .order-list2 table tr td {
                         border-bottom: 1px solid var(--gray4);
                         color: var(--textSub1);
@@ -676,7 +693,6 @@ body {
         color: white;
     }
 
-
 /*--------------------------------------------------------*/
 /*                     DELETION POPUP                     */
 /*--------------------------------------------------------*/
@@ -745,7 +761,6 @@ body {
     backdrop-filter: blur(3px);
     z-index: 1;
 }
-
 
 /*--------------------------------------------------------
                      DELETION POPUP                     
@@ -836,7 +851,6 @@ button {
 .hidden {
     display: none;
 }
-
 .drop-main {
     background-color: var(--gray3);
     color: var(--textMain);
